--- a/app/src/main/res/layout/fragment_them_ban.xml
+++ b/app/src/main/res/layout/fragment_them_ban.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.ThemBanFragment">
+    tools:context=".Database.Fragment.ThemBanFragment">
 
      <androidx.recyclerview.widget.RecyclerView
          android:layout_width="match_parent"
@@ -18,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_add_24"
-        android:layout_marginTop="600dp"
-        android:layout_marginLeft="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:id="@+id/flt_thembanan"
         />
 
