--- a/app/src/main/res/layout/rcvitembanan.xml
+++ b/app/src/main/res/layout/rcvitembanan.xml
@@ -17,7 +17,7 @@
         >
 
         <ImageButton
-
+            android:id="@+id/anh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
