--- a/app/src/main/res/layout/rcvitembanan.xml
+++ b/app/src/main/res/layout/rcvitembanan.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginTop="20dp"
-    android:layout_marginLeft="10dp"
+    android:layout_marginLeft="50dp"
+    app:cardCornerRadius="10dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
+
         android:background="#59959C"
 
         >
@@ -65,4 +66,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
