tinh tien chua song

--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -91,6 +91,7 @@
              >
 
              <CheckBox
+                 android:id="@+id/check"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="0dp"
@@ -110,6 +111,7 @@
          </LinearLayout>
 
             <TextView
+                android:id="@+id/tong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1000000 VND "
