--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -82,6 +82,7 @@
              android:textStyle="bold"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="10dp"
+             android:textColor="#B52B2B"
              />
 
          <LinearLayout
@@ -91,7 +92,7 @@
              >
 
              <CheckBox
-                 android:id="@+id/check"
+                 android:id="@+id/checkb"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="0dp"
@@ -119,6 +120,7 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
+                android:textColor="#B52B2B"
                 />
 
             <Button
