--- a/app/src/main/res/layout/loaimon_item.xml
+++ b/app/src/main/res/layout/loaimon_item.xml
@@ -11,42 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="#F2CB05"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:padding="10dp"
         >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:id="@+id/img_popupMenu"
-                android:src="@drawable/ic_baseline_more_horiz_24_dots"/>
-        </RelativeLayout>
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/images"
             android:id="@+id/loaimon_imgLoaiMon"/>
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Tên Loại Món"
-                android:gravity="center"
-                android:layout_margin="5dp"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:id="@+id/loaimon_tvTenLoai"/>
-        </LinearLayout>
+            android:text="Tên Loại Món"
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:id="@+id/loaimon_tvTenLoai"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
