--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -115,11 +115,21 @@
                 android:id="@+id/tong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1000000 VND "
+                android:text="0  "
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
+                android:textColor="#B52B2B"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" VND "
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="-20dp"
                 android:textColor="#B52B2B"
                 />
 
