--- a/app/src/main/res/layout/mon_item.xml
+++ b/app/src/main/res/layout/mon_item.xml
@@ -11,8 +11,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        android:background="#F2CB05"
         >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/img_popupMenuMon"
+                android:src="@drawable/ic_baseline_more_horiz_24_dots"/>
+        </RelativeLayout>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="100dp"
