--- a/app/src/main/res/menu/popup_menu_loaimon.xml
+++ b/app/src/main/res/menu/popup_menu_loaimon.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="Sắp xếp tên a-z"
+        android:title="Tên loại món a-z"
         android:id="@+id/sortUpLoaiMon"
         />
     <item
-        android:title="Sắp xếp tên z-a"
+        android:title="Tên loại món z-a"
         android:id="@+id/sortDownLoaiMon"/>
 </menu>
