--- a/app/src/main/res/layout/loaimon_item.xml
+++ b/app/src/main/res/layout/loaimon_item.xml
@@ -11,11 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#F2CB05"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:padding="10dp"
         >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/img_popupMenu"
+                android:src="@drawable/ic_baseline_more_horiz_24_dots"/>
+        </RelativeLayout>
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
