--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -26,27 +26,48 @@
 
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tenban"
-            android:text="Bàn Số 1 "
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="#B52B2B"
-            />
+   <androidx.cardview.widget.CardView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:cardElevation="10dp"
+       app:cardCornerRadius="10dp"
+       android:layout_marginLeft="20dp"
+       >
+       <TextView
+           android:layout_width="100dp"
+           android:layout_height="wrap_content"
+           android:id="@+id/tenban"
+           android:text="Bàn Số 1 "
+           android:textStyle="bold"
+           android:textSize="20dp"
+           android:background="#8BC34A"
+            android:gravity="center"
+           android:textColor="#B52B2B"
 
-        <TextView
+           />
+   </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ngay"
-            android:text="20/03/2023 "
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginLeft="170dp"
-            android:textColor="#B52B2B"
-            />
+            app:cardElevation="10dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginLeft="150dp"
+
+            >
+            <TextView
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/ngay"
+                android:text="20/03/2023 "
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:background="#FF9800"
+               android:gravity="center"
+                android:textColor="#B52B2B"
+                />
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -128,7 +149,7 @@
                 android:text=" VND "
                 android:textSize="15dp"
                 android:textStyle="bold"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="100dp"
                 android:layout_marginTop="-20dp"
                 android:textColor="#B52B2B"
                 />
