--- a/app/src/main/res/layout/rcv_montrongban.xml
+++ b/app/src/main/res/layout/rcv_montrongban.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:orientation="horizontal"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="360dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="20dp"
+    app:cardCornerRadius="10dp"
+    android:layout_marginTop="10dp"
+    android:backgroundTint="#B5DF84"
+    android:layout_height="45dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tenmon"
-        android:text="Tên Món Ăn "
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        />
+<!--    <ImageView-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:id="@+id/img"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/soluong"
-        android:text="5 "
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="70dp"
-        />
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tongtien"
-        android:text="25000 "
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="70dp"
-        />
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/tenmon"
+          android:text="Tên Món Ăn "
+          android:textSize="20dp"
+          android:textStyle="bold"
+          android:layout_marginTop="10dp"
+          android:layout_marginLeft="30dp"
+          />
 
-</LinearLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/soluong"
+          android:text="5 "
+          android:textSize="20dp"
+          android:textStyle="bold"
+          android:layout_marginTop="10dp"
+          android:layout_marginLeft="40dp"
+          />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/tongtien"
+          android:text="25000 "
+          android:textSize="20dp"
+          android:textStyle="bold"
+          android:layout_marginTop="10dp"
+          android:layout_marginLeft="40dp"
+          />
+
+  </LinearLayout>
+
+</androidx.cardview.widget.CardView>
