--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -32,6 +32,7 @@
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="20dp"
+
        >
        <TextView
            android:layout_width="100dp"
@@ -70,14 +71,19 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rcv"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
-        />
+        android:layout_height="300dp"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rcv"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            android:layout_marginBottom="20dp"
+            />
+    </ScrollView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="280dp"
@@ -85,7 +91,7 @@
         android:layout_centerHorizontal="true"
         app:cardElevation="10dp"
         app:cardCornerRadius="10dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center"
         >
         <LinearLayout
