fix lỗi activity login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,73 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#F2CB05"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activity.Login">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="254dp"
-        android:src="@drawable/login"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        app:boxStrokeColor="#6200EE"
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:textColorHint="#6200EE"
-        android:hint="Tên đăng nhập"
-        app:expandedHintEnabled="false"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         >
-        <com.google.android.material.textfield.TextInputEditText
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/wave3" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edUserName"
+            android:layout_margin="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="HELLO THERE, WELLCOME BACK"
+                android:textColor="#fff"
+                android:textSize="22dp"
+                android:textStyle="bold" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        app:boxStrokeColor="#6200EE"
+            <androidx.constraintlayout.utils.widget.ImageFilterView
+                android:layout_width="20dp"
+                android:layout_height="130dp"
+                android:layout_weight="0.5"
+                android:scaleType="fitXY"
+                android:src="@drawable/image_31__1_"
+                app:crossfade="0"
+                app:round="100dp" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:textColorHint="#6200EE"
-        android:hint="Mật Khẩu"
-        app:passwordToggleEnabled="true"
-        app:expandedHintEnabled="false"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        >
-        <com.google.android.material.textfield.TextInputEditText
+        android:background="@drawable/custom_textview"
+        app:cardCornerRadius="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardBackgroundColor="#FBFBFB"
+        app:cardMaxElevation="10dp"
+        android:layout_marginTop="230dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edPassword"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
-       <CheckBox
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="Nhớ Mật Khẩu"
-           android:textColor="#0F6392"
-           android:textStyle="bold"
-           android:layout_marginHorizontal="20dp"
-           android:id="@+id/chkRememberPass"
-           />
-       <Button
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Đăng Nhập"
-           android:layout_gravity="center"
-           android:backgroundTint="#D98B2B"
-           android:textStyle="bold"
-           android:textColor="@color/black"
-           android:id="@+id/dangnhap"
-           android:onClick="checkLogin"
-           />
+            android:orientation="vertical"
+            android:padding="10dp">
 
-</LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Sign in to continue"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                app:hintTextColor="#9F9F9F"
+                app:boxStrokeColor="#9F9F9F">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_edUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:drawableEnd="@drawable/ic_baseline_person_24_ed_username"
+                    android:hint="Nhập username" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                app:hintTextColor="#9F9F9F"
+                app:boxStrokeColor="#9F9F9F">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_edPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:drawableEnd="@drawable/ic_baseline_lock_24_ed_password"
+                    android:hint="Nhập password" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <CheckBox
+                android:id="@+id/login_chkRemember"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Remember me?" />
+
+            <Button
+                android:id="@+id/login_btnLogin"
+                android:layout_width="350dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="#F2CB05"
+                android:text="Login" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
