--- a/app/src/main/res/layout/dialog_banan.xml
+++ b/app/src/main/res/layout/dialog_banan.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="@drawable/shape_custom_dialog"
+    android:layout_gravity="center"
     android:layout_height="wrap_content">
 
     <TextView
