--- a/app/src/main/res/layout/dialog_nhan_vien.xml
+++ b/app/src/main/res/layout/dialog_nhan_vien.xml
@@ -78,6 +78,32 @@
             android:layout_height="match_parent"
             android:hint="Nhập số điện thoại" />
     </com.google.android.material.textfield.TextInputLayout>
+
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                >
+
+                <RadioButton
+                    android:id="@+id/quanli"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quản Lí "
+
+                    />
+                <RadioButton
+                    android:id="@+id/nhanvien"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nhân Viên  "
+                    android:layout_marginLeft="30dp"
+                    />
+
+            </RadioGroup>
+
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -85,23 +111,12 @@
         android:layout_margin="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nhanvien_edUyQuyen"
+            android:id="@+id/nhanvien_Status"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Uỷ Quyền" />
+            android:hint="Nhập StaTus  " />
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="3dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nhanvien_edStartus"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Startus" />
-    </com.google.android.material.textfield.TextInputLayout>
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
