--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -75,7 +75,7 @@
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         >
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
