--- a/app/src/main/res/layout/rcvview_top5.xml
+++ b/app/src/main/res/layout/rcvview_top5.xml
@@ -5,6 +5,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginLeft="50dp"
     app:cardCornerRadius="10dp"
+    app:cardElevation="15dp"
     android:layout_height="100dp">
 
     <LinearLayout
@@ -14,10 +15,10 @@
         >
 
         <TextView
-            android:id="@+id/mahoadon"
+            android:id="@+id/tenmon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:text="Trà Sữa"
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_marginTop="30dp"
@@ -25,10 +26,10 @@
             />
 
         <TextView
-            android:id="@+id/tongtien"
+            android:id="@+id/soluong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100000 VND"
+            android:text="1000"
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_marginTop="30dp"
