fix cuoi ngay 6/4/2023

--- a/app/src/main/res/layout/dialog_thanhtoan_hoa_don.xml
+++ b/app/src/main/res/layout/dialog_thanhtoan_hoa_don.xml
@@ -45,7 +45,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:backgroundTint="#F2CB05"
-            android:text="Save"
+            android:text="Thanh Toán"
             android:textStyle="bold" />
 
         <Button
