--- a/app/src/main/res/layout/fragment_them_ban.xml
+++ b/app/src/main/res/layout/fragment_them_ban.xml
@@ -22,5 +22,14 @@
         android:layout_alignParentRight="true"
         android:id="@+id/flt_thembanan"
         />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_add_24"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/flt_mangve"
+        />
+
 
 </RelativeLayout>
