--- a/app/src/main/res/layout/dialog_loai_mon.xml
+++ b/app/src/main/res/layout/dialog_loai_mon.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
+    android:gravity="center"
     android:background="@drawable/shape_custom_dialog"
     android:orientation="vertical">
     <TextView
@@ -20,8 +21,9 @@
 
     <ImageView
         android:id="@+id/loaimon_addImg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
         android:layout_margin="10dp"
         android:src="@drawable/images" />
 
