--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -73,19 +73,16 @@
 
 
     </LinearLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="350dp"
             android:id="@+id/rcv"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
             android:layout_marginBottom="20dp"
             />
-    </ScrollView>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="280dp"
@@ -93,7 +90,7 @@
         android:layout_centerHorizontal="true"
         app:cardElevation="10dp"
         app:cardCornerRadius="10dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         >
         <LinearLayout
