--- a/app/src/main/res/layout/rcv_montrongban.xml
+++ b/app/src/main/res/layout/rcv_montrongban.xml
@@ -19,38 +19,35 @@
               android:padding="20dp"
               android:layout_margin="10dp"
               >
-          <ImageView
-              android:layout_width="50dp"
-              android:layout_height="50dp"
-              android:id="@+id/img"
-              android:layout_marginRight="10dp"
-              android:scaleType="fitXY"
-              />
+
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/tenmon"
+              android:textAlignment="center"
               android:text="Tên Món Ăn "
-              android:textSize="20dp"
+              android:textSize="16dp"
               android:textStyle="bold"
               />
           <TextView
+              android:textAlignment="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.2"
               android:id="@+id/soluong"
               android:text="5 "
-              android:textSize="20dp"
+              android:textSize="16dp"
               android:textStyle="bold"
               />
           <TextView
+              android:textAlignment="center"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:layout_weight="0.5"
+              android:layout_weight="1"
               android:id="@+id/tongtien"
               android:text="25000 "
-              android:textSize="20dp"
+              android:textSize="16dp"
               android:textStyle="bold"
               />
           </LinearLayout>
