--- a/app/src/main/res/layout/rcvitem_hoadon.xml
+++ b/app/src/main/res/layout/rcvitem_hoadon.xml
@@ -75,18 +75,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tên Khách Hàng : "
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Tên Khách Hàng : "-->
 
-                android:id="@+id/makh"
+<!--                android:id="@+id/makh"-->
 
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                />
+<!--                android:textSize="20dp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                />-->
 
 
         </LinearLayout>
