--- a/app/src/main/res/layout/rcvview_top5.xml
+++ b/app/src/main/res/layout/rcvview_top5.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="20dp"
-    android:layout_marginLeft="50dp"
+ android:layout_margin="10dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="15dp"
     android:layout_height="100dp">
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
-
         <TextView
-            android:id="@+id/tenmon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Trà Sữa"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            />
-
-        <TextView
-            android:id="@+id/soluong"
+            android:textAlignment="center"
+            android:layout_weight="0.3"
+            android:id="@+id/tongTien"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1000"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="100dp"
+            />
+
+        <TextView
+            android:id="@+id/tenmon"
+            android:layout_weight="0.5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trà Sữa"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            />
+
+        <TextView
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:id="@+id/soluong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1000"
+            android:textSize="16dp"
+            android:textStyle="bold"
             />
 
 
