--- a/app/src/main/res/layout/fragment_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/fragment_chi_tiet_san_pham.xml
@@ -67,17 +67,27 @@
                             android:hint="Nhập số lượng" />
                     </com.google.android.material.textfield.TextInputLayout>
                     <LinearLayout
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
                         <Button
                             android:id="@+id/chitiet_btnAdd"
-                            android:layout_width="200dp"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.3"
+                            android:layout_weight="1.18"
                             android:backgroundTint="#F2CB05"
                             android:text="Thêm giỏ hàng"
+                            android:layout_margin="3dp"
+                            />
+                        <Button
+                            android:id="@+id/chitiet_btnThanhToan"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#F2CB05"
+                            android:text="Thanh toán"
+                            android:layout_margin="3dp"
                             />
                     </LinearLayout>
                 </LinearLayout>
